--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -1,4 +1,6 @@
 es:
-  menu:
-    officers: "Cargos"
-    events: "Eventos"
+  backend:
+    contributors: "Contribuidores"
+    holders: "Titulares"
+    areas: "Áreas"
+    positions: "Cargos"
