--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -1,6 +1,15 @@
 es:
   backend:
     contributors: "Contribuidores"
+    new_contributor: "Nuevo contribuidor"
+
     holders: "Titulares"
     areas: "Áreas"
     positions: "Cargos"
+    new_contributor: "Nuevo contribuidor"
+    edit_contributor: "Editando contribuidor"
+
+  backend_header:
+    open_gov: "Gobierno abierto"
+    administracion: "Administración"
+
