Frontend event detail [finishes #104882254]

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -26,5 +26,11 @@ es:
       any: "Todos"
       search: "Buscar"
       reset: "Cancelar"
+  show:
+    participants: "Asisten"
+    location: "Lugar"
+    description: "Descripción"
+    documentation: "Documentación"
+    holder: "Organiza"
 
 
