--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -9,7 +9,7 @@ es:
   no: "No"
   none-o: "Ninguno"
   none-a: "Ninguna"
-  datepicker-format: "dd/mm/yy"
+  datepicker-format: "dd/mm/yyyy"
   size: "Tamaño"
   time:
     formats:
