--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -3,25 +3,35 @@ es:
     close: "Cerrar"
     access_denied: "No dispone de privilegios suficientes para realizar esta operación"
     confirm: "¿Está seguro?"
+    edit: "Editar"
     delete: "Eliminar"
+    save: "Guardar"
     actions: "Acciones"
+    add: "Añadir"
+    basic_data: "Datos básicos"
+    mandatory_field: "Este campo es obligatorio"
 
     contributors: "Contribuidores"
-    new_contributor: "Nuevo contribuidor"
-    edit_contributor: "Editando contribuidor"
+    new_user: "Nuevo usuario"
+    edit_user: "Editar usuario"
     users: "Usuarios"
-    name: "Nombre"
+    first_name: "Nombre"
+    last_name: "Apellidos"
     role: "Rol"
 
     holders: "Titulares"
     new_holder: "Nuevo titular"
     edit_holder: "Editar titular"
+    from: "Desde"
+    to: "Hasta"
 
     areas: "Organigrama"
     new_area: "Nueva Área"
     edit_area: "Editar Área"
 
+    position: "Cargo"
     positions: "Cargos"
+    contributed_by: "Gestionado por"
     new_position: "Nuevo cargo"
     edit_position: "Editar cargo"
 
