On demand changes 18/11/2015

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -12,7 +12,8 @@ es:
     add: "Añadir"
     back: "Volver"
     none: "Ninguno"
-    basic_data: "Datos básicos"
+    frontend: "Zona pública"
+    basic_data: "Datos"
     mandatory_field: "Este campo es obligatorio"
     successfully_updated_record: "Registro actualizado correctamente"
     successfully_destroyed_record: "Registro eliminado correctamente"
@@ -22,12 +23,14 @@ es:
     contributors: "Contribuidores"
     new_user: "Nuevo usuario"
     edit_user: "Editar usuario"
-    users: "Usuarios"
+    users: "Gestores de agenda"
     user: Usuario
     first_name: "Nombre"
     last_name: "Apellidos"
     role: "Rol"
-    managed_positions: "Cargos gestionados"
+    user: "Gestor"
+    admin: "Administrador"
+    managed_positions: "Agendas"
 
     holders: "Titulares"
     holder: "Titular"
@@ -43,7 +46,8 @@ es:
     parent: "Padre"
 
     position: "Cargo"
-    positions: "Cargos"
+    main_position: "Convocante"
+    positions: "Titulares de agenda"
     contributed_by: "Gestionado por"
     new_position: "Nuevo cargo"
     edit_position: "Editar cargo"
@@ -53,9 +57,10 @@ es:
     event: "Evento"
     date: "Fecha"
     location: "Lugar"
-    attendees: "Asistentes"
-    participants: "Participantes"
+    attendees: "Otros asistentes"
+    participants: "Asistentes del ayuntamiento"
     attachments: "Archivos adjuntos"
+    only_pdf: "Solo PDF"
     name: "Nombre"
     file: "Archivo"
     title: "Título"
