--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -1,6 +1,7 @@
 es:
   backend:
     close: "Cerrar"
+    logout: "Salir"
     access_denied: "No dispone de privilegios suficientes para realizar esta operación"
     confirm: "¿Está seguro?"
     edit: "Editar"
@@ -18,7 +19,8 @@ es:
     successfully_updated_record: "Registro actualizado correctamente"
     successfully_destroyed_record: "Registro eliminado correctamente"
     successfully_created_record: "Registro creado correctmente"
-    review_errors: "Por favor correija los siguientes errores antes de continuar"
+    unable_to_perform_operation: "No ha sido posible realizar la operación"
+    review_errors: "Por favor corrija los siguientes errores antes de continuar"
 
     contributors: "Contribuidores"
     new_user: "Nuevo usuario"
