--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -1,5 +1,5 @@
 es:
-  site_title: "Transparencia - Agendas"
+  site_title: "Ayuntamiento de Madrid > Transparencia > Agendas"
   site_description: "Pendiente de definir"
   header:
     page_language: "Idioma de la página"
