--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Code Climate](https://codeclimate.com/repos/5609610ee30ba02f6c0004e6/badges/8cb97e196dd1eec126f1/gpa.svg)](https://codeclimate.com/repos/5609610ee30ba02f6c0004e6/feed)
+
 Agendas
 ================
 
