On demand changes 04/12/15

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -33,6 +33,7 @@ es:
     user: "Gestor"
     admin: "Administrador"
     managed_positions: "Agendas"
+    manage_agendas: "Asignación de Agendas"
 
     holders: "Titulares"
     holder: "Titular"
