Sync process with rescue task

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -20,6 +20,7 @@ es:
     successfully_destroyed_record: "Registro eliminado correctamente"
     successfully_created_record: "Registro creado correctmente"
     successfully_sync: "La sincronización se ha realizado correctamente"
+    unable_sync: "No ha podido ejecutarse la sincronización. Por favor, intente más tarde"
     unable_to_perform_operation: "No ha sido posible realizar la operación"
     review_errors: "Por favor corrija los siguientes errores antes de continuar"
     sync: "Sincronizar con UWEB"
