--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -10,7 +10,7 @@ es:
     participation: "Participación"
     open_data: "Datos abiertos"
   main:
-    title: "Publicación de agendas"
+    title: "Agendas públicas"
     any_errors: "¿Hay algún error en esta página?"
     get_updates: "Recibe actualizaciones de esta lista"
     share: "Compartir"
