Header & footer restyling and links

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -78,6 +78,7 @@ es:
     edit_event: "Editar evento"
 
     activity: "Registro de Actividad"
+    entries: "Registros"
 
   backend_header:
     open_gov: "Gobierno abierto"
