--- a/config/locales/activerecord.es.yml
+++ b/config/locales/activerecord.es.yml
@@ -1,10 +1,8 @@
 es:
   errors:
     format: "%{attribute}  %{message}"
-
     messages: &errors_messages
       blank: "no puede estar en blanco"
-
   activerecord:
     errors:
       template:
@@ -12,11 +10,9 @@ es:
           one:    "1 error impidió guardar este %{model} "
           other:  "%{count} errores impidieron guardar este %{model}"
         body: "There were problems with the following fields:"
-
       messages:
         record_invalid: "Fallo de validación: %{errors}"
         <<: *errors_messages
-
       full_messages:
         format: "%{attribute} %{message}"
     models:
@@ -29,3 +25,7 @@ es:
       holder:
         one: "titular de agenda"
         other: "titulares de agenda"
+      attachment:
+        one: "archivo adjunto"
+        other: "archivos adjuntos"
+
