Remove pagination and simple search at events

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -1,4 +1,93 @@
-en:
-  menu:
-    officers: "Cargos"
+es:
+  backend:
+    close: "Cerrar"
+    logout: "Salir"
+    access_denied: "No dispone de privilegios suficientes para realizar esta operación"
+    confirm: "¿Está seguro?"
+    edit: "Editar"
+    delete: "Eliminar"
+    save: "Guardar"
+    cancel: "Cancelar"
+    action: "Acción"
+    actions: "Acciones"
+    add: "Añadir"
+    back: "Volver"
+    none: "Ninguno"
+    frontend: "Zona pública"
+    basic_data: "Datos"
+    mandatory_field: "Este campo es obligatorio"
+    successfully_updated_record: "Registro actualizado correctamente"
+    successfully_destroyed_record: "Registro eliminado correctamente"
+    successfully_created_record: "Registro creado correctmente"
+    successfully_sync: "La sincronización se está ejecutando. En breve estarán disponibles los datos actualizados"
+    unable_sync: "No ha podido ejecutarse la sincronización. Por favor, intente más tarde"
+    unable_to_perform_operation: "No ha sido posible realizar la operación"
+    review_errors: "Por favor corrija los siguientes errores antes de continuar"
+    sync: "Sincronizar con UWEB"
+    export: "Exportar"
+
+    contributors: "Contribuidores"
+    new_user: "Nuevo usuario"
+    edit_user: "Editar usuario"
+    users: "Gestores de agenda"
+    user: Usuario
+    first_name: "Nombre"
+    last_name: "Apellidos"
+    role: "Rol"
+    user: "Gestor"
+    admin: "Administrador"
+    managed_positions: "Agendas"
+    manage_agendas: "Asignación de Agendas"
+
+    holders: "Titulares"
+    holder: "Titular"
+    new_holder: "Nuevo titular"
+    edit_holder: "Editar titular"
+    from: "Desde"
+    to: "Hasta"
+    public_url: "URL pública"
+
+    areas: "Organigrama"
+    descendant: "Subareas"
+    new_area: "Nueva Área"
+    edit_area: "Editar Área"
+    parent: "Padre"
+
+    position: "Cargo"
+    main_position: "Titular de la agenda"
+    positions: "Titulares de agenda"
+    contributed_by: "Gestionado por"
+    new_position: "Nuevo cargo"
+    edit_position: "Editar cargo"
+    must_have_position: "Es necesario añadir al menos un cargo"
+
     events: "Eventos"
+    event: "Evento"
+    search:
+        title: "Búsqueda por título"
+        placeholder_title: "Búsqueda por título"
+        person: "Ó por titular/asistente"
+        placeholder_person: "Búsqueda por titulares y asistentes"
+        button: "Buscar"
+    date: "Fecha"
+    location: "Lugar"
+    attendees: "Otros asistentes"
+    participants: "Asistentes titulares de agenda"
+    participants_uniqueness: "Existen titulares de agenda duplicados"
+    position_not_in_participants: "El titular de agenda se ha incluido también como asistente"
+    attachments: "Archivos adjuntos"
+    only_pdf: "Solo PDF"
+    name: "Nombre"
+    file: "Archivo"
+    title: "Título"
+    company: "Organización"
+    description: "Descripción"
+    new_event: "Nuevo evento"
+    edit_event: "Editar evento"
+
+    activity: "Registro de Actividad"
+    entries: "Registros"
+
+  backend_header:
+    open_gov: "Gobierno abierto"
+    administracion: "Administración"
