--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -66,7 +66,7 @@ es:
     search:
         title: "Búsqueda por título"
         placeholder_title: "Búsqueda por título"
-        person: "Ó por titular/asistente"
+        person: "Búsqueda por titulares y asistentes"
         placeholder_person: "Búsqueda por titulares y asistentes"
         button: "Buscar"
     date: "Fecha"
