changes to user and admin roles

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -54,8 +54,9 @@ es:
     parent: "Padre"
 
     position: "Cargo"
+    area: "Unidad"
     main_position: "Titular de la agenda"
-    positions: "Titulares de agenda"
+    positions: "Histórico de cargos"
     contributed_by: "Gestionado por"
     new_position: "Nuevo cargo"
     edit_position: "Editar cargo"
@@ -73,6 +74,7 @@ es:
         placeholder_person: "Búsqueda por titulares y asistentes"
         button: "Buscar"
     date: "Fecha"
+    delete_confirm: "Este evento se va a eliminar de todas las agendas en las que está anotado, tanto del convocante como de los asistentes. ¿Está seguro de eliminarlo?"
     location: "Lugar"
     attendees: "Otros asistentes"
     participants: "Asistentes titulares de agenda"
