--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -27,7 +27,7 @@ es:
     form:
       title: "Utiliza estos filtros para buscar la información que más te interesa."
       keyword: "Palabra clave"
-      main_area: "Área de gobierno"
+      main_area: "Área/Distrito/Organismo autónomo"
       child_area: "Dirección general"
       holder: "Titular de la agenda"
       date: "Fecha"
