--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,8 @@
 es:
+  event:
+    create: 'Evento creado'
+    update: 'Evento editado'
+    destroy: 'Evento borrado'
   number_delimiter: "."
   number_separator: ","
   month: "mes"
