--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -34,7 +34,11 @@ es:
     first_name: "Nombre"
     last_name: "Apellidos"
     role: "Rol"
+    agenda_url: "Enlace de la agenda"
+    user_url: "Enlace del gestor"
     user: "Gestor"
+    users: "Gestores"
+    holder: "Titulares"
     admin: "Administrador"
     managed_positions: "Agendas"
     manage_agendas: "Asignación de Agendas"
