--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -98,6 +98,10 @@ es:
     activity: "Registro de Actividad"
     entries: "Registros"
 
+    change_password: "Change password"
+    password: "Password"
+    password_confirmation: "Repeat password"
+
   backend_header:
     open_gov: "Gobierno abierto"
     administracion: "Administración"
