Form added with current password field

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -101,6 +101,7 @@ es:
     change_password: "Cambiar contraseña"
     password: "Contraseña"
     password_confirmation: "Repetir contraseña"
+    successfully_updated_password: "Contraseña actualizada correctamente"
 
   backend_header:
     open_gov: "Gobierno abierto"
