--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -101,6 +101,7 @@ es:
     change_password: "Change password"
     password: "Password"
     password_confirmation: "Repeat password"
+    successfully_updated_password: "Password succesfully updated"
 
   backend_header:
     open_gov: "Gobierno abierto"
