--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,3 +76,40 @@ en:
       - :day
       - :month
       - :year
+  public_organization_exporter:
+    reference: reference
+    identifier: identifier
+    name: name
+    first_name: first name
+    last_name: last name
+    address_type: address type
+    address: address
+    number: number
+    gateway: gateway
+    stairs: stairs
+    floor: floor
+    door: door
+    postal_code: postal code
+    town: town
+    province: province
+    phones: phones
+    email: email
+    category_name: category name
+    description: description
+    web: web
+    fiscal_year: fiscal year
+    subvention: subvention
+    contract: contract
+    denied_public_data: denied public data
+    denied_public_events: denied public events
+    registered_lobbies: registered lobbies
+    range_fund: range fund
+    inscription_reference: inscription reference
+    inscription_date: inscription date
+    entity_type: entity type
+    neighbourhood: neighbourhood
+    district: district
+    scope: scope
+    associations_count: associations count
+    members_count: members count
+    approach: approach
