Added organization index files for admins

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -91,6 +91,8 @@ es:
     file: "Archivo"
     title: "Título"
     company: "Organización"
+    companies: "Organizaciones"
+    new_company: "Nueva organización"
     description: "Descripción"
     new_event: "Nuevo evento"
     edit_event: "Editar evento"
