--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -1,5 +1,6 @@
 es:
   organizations:
-    title: "Consulta del registro de lobbies"
+    title: Consulta del registro de lobbies
+    description: Consulte las organizaciones registradas en el registro de lobbies.
     subtitle:
-      default: "Últimos lobbies registrados"
+      default: Últimos lobbies registrados
