--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -102,7 +102,8 @@ es:
 
     change_password: "Cambiar contraseña"
     password: "Contraseña"
-    password_confirmation: "Repetir contraseña"
+    new_password: "Nueva contraseña"
+    new_password_confirmation: "Repetir nueva contraseña"
     current_password: "Contraseña actual"
     modify: "Modificar"
 
