Basic pages of index, new, edit and user index created, and corresponding methods in controllers

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -106,6 +106,15 @@ es:
     current_password: "Current password"
     modify: "Modify"
 
+    faq:
+      questions: "Preguntas frecuentes"
+      new_question: "Nueva pregunta"
+      edit_question: "Editar pregunta"
+      title: "Título"
+      answer: "Respuesta"
+      position: "Posición"
+    send: "Enviar"
+
   backend_header:
     open_gov: "Gobierno abierto"
     administracion: "Administración"
